rematando front, y falta refactorizar

--- a/src/app/components/BodyIMG/bodyimg.component.html
+++ b/src/app/components/BodyIMG/bodyimg.component.html
@@ -1,1 +1,126 @@
-<h2>BODYIMG</h2>
+<div class="body_app_post">
+  <div class="post">
+    <div class="user_info">
+      <img
+        class="profile_img"
+        src="./assets/usersImgs/[image] - 1369546.jpg"
+        alt="profile_img"
+      />
+      <h3 class="profile_name">frodoBolsn69</h3>
+      <h3 class="more_info">...</h3>
+    </div>
+    <img
+      class="user_post"
+      src="./assets/userPosts/[image] - 3770192.jpg"
+      alt="user_post"
+    />
+    <div class="reactions">
+      <img src="./assets/btnLogos/heart.png" alt="heart_reaction_logo" />
+      <img
+        src="./assets/btnLogos/bubble_logo.png"
+        alt="comment_reaction_logo"
+      />
+      <img
+        src="./assets/btnLogos/paper_plane_logo.png"
+        alt="message_reaction_logo"
+      />
+      <img src="./assets/btnLogos/save_logo.png" alt="save_reaction_logo" />
+    </div>
+    <h3 class="comment_posted">
+      <strong>DulceSol</strong>¿Ese color de pelo es natural?
+    </h3>
+  </div>
+  <div class="post">
+    <div class="user_info">
+      <img
+        class="profile_img"
+        src="./assets/usersImgs/[image] - 980766.jpg"
+        alt="profile_img"
+      />
+      <h3 class="profile_name">Arwensita</h3>
+      <h3 class="more_info">...</h3>
+    </div>
+    <img
+      class="user_post"
+      src="./assets/userPosts/[image] - 5639806.jpg"
+      alt="user_post"
+    />
+    <div class="reactions">
+      <img src="./assets/btnLogos/heart.png" alt="heart_reaction_logo" />
+      <img
+        src="./assets/btnLogos/bubble_logo.png"
+        alt="comment_reaction_logo"
+      />
+      <img
+        src="./assets/btnLogos/paper_plane_logo.png"
+        alt="message_reaction_logo"
+      />
+      <img src="./assets/btnLogos/save_logo.png" alt="save_reaction_logo" />
+    </div>
+    <h3 class="comment_posted">
+      <strong>6alicante2</strong>DIOOOS peaso bolo illo
+    </h3>
+  </div>
+  <div class="post">
+    <div class="user_info">
+      <img
+        class="profile_img"
+        src="./assets/usersImgs/[image] - 7013367.jpg "
+        alt="profile_img"
+      />
+      <h3 class="profile_name">Gollum</h3>
+      <h3 class="more_info">...</h3>
+    </div>
+    <img
+      class="user_post"
+      src="./assets/userPosts/[image] - 6713552.jpg"
+      alt="user_post"
+    />
+    <div class="reactions">
+      <img src="./assets/btnLogos/heart.png" alt="heart_reaction_logo" />
+      <img
+        src="./assets/btnLogos/bubble_logo.png"
+        alt="comment_reaction_logo"
+      />
+      <img
+        src="./assets/btnLogos/paper_plane_logo.png"
+        alt="message_reaction_logo"
+      />
+      <img src="./assets/btnLogos/save_logo.png" alt="save_reaction_logo" />
+    </div>
+    <h3 class="comment_posted">
+      <strong>Anabel</strong>Soy yo a todas horas...
+    </h3>
+  </div>
+  <div class="post">
+    <div class="user_info">
+      <img
+        class="profile_img"
+        src="./assets/usersImgs/[image] - 9073031.jpg"
+        alt="profile_img"
+      />
+      <h3 class="profile_name">Galadriel</h3>
+      <h3 class="more_info">...</h3>
+    </div>
+    <img
+      class="user_post"
+      src="./assets/userPosts/[image] - 7241799.jpg"
+      alt="user_post"
+    />
+    <div class="reactions">
+      <img src="./assets/btnLogos/heart.png" alt="heart_reaction_logo" />
+      <img
+        src="./assets/btnLogos/bubble_logo.png"
+        alt="comment_reaction_logo"
+      />
+      <img
+        src="./assets/btnLogos/paper_plane_logo.png"
+        alt="message_reaction_logo"
+      />
+      <img src="./assets/btnLogos/save_logo.png" alt="save_reaction_logo" />
+    </div>
+    <h3 class="comment_posted">
+      <strong>Andrés J. K.</strong>&#64;luzArme You & Me 😍
+    </h3>
+  </div>
+</div>
