--- a/src/app/components/SearchBar/searchbar.component.html
+++ b/src/app/components/SearchBar/searchbar.component.html
@@ -7,10 +7,10 @@
   </span>
   <div class="search_div">
     <img
-      src="./assets/magnifying_glass_magnifier_search_icon_208236.png"
+      src="./assets/btnLogos/magnifying_glass_magnifier_search_icon_208236.png"
       alt="magnifying_glass_logo"
     />
     <input type="text" placeholder="Busca" />
-    <img src="./assets/heart.png" alt="heart_logo" />
+    <img src="./assets/btnLogos/heart.png" alt="heart_logo" />
   </div>
 </div>
