--- a/src/app/shared/_colors.scss
+++ b/src/app/shared/_colors.scss
@@ -1,3 +1,4 @@
 $principalBckgrnd: #ffffff;
 $greyBckgrnd: #f0f0f0;
 $underlineColor: #000000 transparent transparent transparent;
+$borderStory: 2px solid #a8199e71;
