--- a/src/app/components/BodyIMG/bodyimg.component.html
+++ b/src/app/components/BodyIMG/bodyimg.component.html
@@ -27,7 +27,9 @@
       <img src="./assets/btnLogos/save_logo.png" alt="save_reaction_logo" />
     </div>
     <h3 class="comment_posted">
-      <strong>DulceSol</strong>¿Ese color de pelo es natural?
+      <strong>DulceSol</strong> ¿Ese color de pelo es natural?
+      <h3 class="h3_traduct">Ver traducción</h3>
+      <h3 class="h3_seecoms">Ver los 300 comentarios</h3>
     </h3>
   </div>
   <div class="post">
@@ -58,7 +60,9 @@
       <img src="./assets/btnLogos/save_logo.png" alt="save_reaction_logo" />
     </div>
     <h3 class="comment_posted">
-      <strong>6alicante2</strong>DIOOOS peaso bolo illo
+      <strong>6alicante2</strong> DIOOOS peaso bolo illo
+      <h3 class="h3_traduct">Ver traducción</h3>
+      <h3 class="h3_seecoms">Ver los 2 comentarios</h3>
     </h3>
   </div>
   <div class="post">
@@ -89,7 +93,9 @@
       <img src="./assets/btnLogos/save_logo.png" alt="save_reaction_logo" />
     </div>
     <h3 class="comment_posted">
-      <strong>Anabel</strong>Soy yo a todas horas...
+      <strong>Anabel</strong> Soy yo a todas horas...
+      <h3 class="h3_traduct">Ver traducción</h3>
+      <h3 class="h3_seecoms">Ver los 13 comentarios</h3>
     </h3>
   </div>
   <div class="post">
@@ -120,7 +126,9 @@
       <img src="./assets/btnLogos/save_logo.png" alt="save_reaction_logo" />
     </div>
     <h3 class="comment_posted">
-      <strong>Andrés J. K.</strong>&#64;luzArme You & Me 😍
+      <strong>Andrés J. K.</strong> &#64;luzArme You & Me 😍
+      <h3 class="h3_traduct">Ver traducción</h3>
+      <h3 class="h3_seecoms">Ver los 2393 comentarios</h3>
     </h3>
   </div>
 </div>
