--- a/src/app/components/NavBar/navbar.component.html
+++ b/src/app/components/NavBar/navbar.component.html
@@ -1,1 +1,31 @@
-<h2>NAVBAR</h2>
+<nav>
+  <img
+    src="./assets/btnLogos/Instagram_letters_logo.png"
+    alt="ig_letters_logo"
+  />
+  <img src="./assets/btnLogos/ig_bw_logo.png" alt="ig_bw_logo" />
+  <img src="./assets/btnLogos/home_logo.png" alt="home_logo" />
+  <h3 class="h3_home">Inicio</h3>
+  <img
+    src="./assets/btnLogos/magnifying_glass_magnifier_search_icon_208236.png"
+    alt="magnifying_glass_logo"
+  />
+  <h3 class="h3_search">Búsqueda</h3>
+  <img src="./assets/btnLogos/compass_logo.png" alt="brujula_logo" />
+  <h3 class="h3_explore">Explorar</h3>
+  <img src="./assets/btnLogos/reel_logo.png" alt="reel_logo" />
+  <h3 class="h3_reel">Reels</h3>
+  <img src="./assets/btnLogos/plus_logo.png" alt="plus_logo" />
+  <h3 class="h3_create">Crear</h3>
+  <img src="./assets/btnLogos/heart.png" alt="heart_logo" />
+  <h3 class="h3_notifications">Notificaciones</h3>
+  <img src="./assets/btnLogos/paper_plane_logo.png" alt="paper_plane_logo" />
+  <h3 class="h3_messages">Mensajes</h3>
+  <img src="./assets/usersImgs/[image] - 1369546.jpg" alt="user_logo" />
+  <h3 class="h3_profile">Perfil</h3>
+  <img
+    src="./assets/btnLogos/three_stripes_logo.png"
+    alt="three_stripes_logo"
+  />
+  <h3 class="h3_more">Más</h3>
+</nav>
