--- a/src/app/components/SearchBar/searchbar.component.html
+++ b/src/app/components/SearchBar/searchbar.component.html
@@ -4,6 +4,7 @@
     <div class="quote-icon">
       <div class="quote"></div>
     </div>
+    <span class="following">Siguiendo</span>
   </span>
   <div class="search_div">
     <img
