--- a/src/app/components/UserStories/userstories.component.html
+++ b/src/app/components/UserStories/userstories.component.html
@@ -65,5 +65,176 @@
       />
       <span class="username">Arwensita</span>
     </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 410414.jpg"
+        alt="img_user"
+      />
+      <span class="username">gAnDalFf</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 5010880.jpg"
+        alt="img_user"
+      />
+      <span class="username">Gimli S.L</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 9073031.jpg"
+        alt="img_user"
+      />
+      <span class="username">Galadriel</span>
+    </div>
+
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 8765500.jpg"
+        alt="img_user"
+      />
+      <span class="username">BGonzález</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 7060678.jpg"
+        alt="img_user"
+      />
+      <span class="username">AragornZGZ</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 7013367.jpg"
+        alt="img_user"
+      />
+      <span class="username">Gollum</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 980766.jpg"
+        alt="img_user"
+      />
+      <span class="username">Arwensita</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 410414.jpg"
+        alt="img_user"
+      />
+      <span class="username">gAnDalFf</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 5010880.jpg"
+        alt="img_user"
+      />
+      <span class="username">Gimli S.L</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 9073031.jpg"
+        alt="img_user"
+      />
+      <span class="username">Galadriel</span>
+    </div>
+
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 8765500.jpg"
+        alt="img_user"
+      />
+      <span class="username">BGonzález</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 7060678.jpg"
+        alt="img_user"
+      />
+      <span class="username">AragornZGZ</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 7013367.jpg"
+        alt="img_user"
+      />
+      <span class="username">Gollum</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 980766.jpg"
+        alt="img_user"
+      />
+      <span class="username">Arwensita</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 410414.jpg"
+        alt="img_user"
+      />
+      <span class="username">gAnDalFf</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 5010880.jpg"
+        alt="img_user"
+      />
+      <span class="username">Gimli S.L</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 9073031.jpg"
+        alt="img_user"
+      />
+      <span class="username">Galadriel</span>
+    </div>
+
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 8765500.jpg"
+        alt="img_user"
+      />
+      <span class="username">BGonzález</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 7060678.jpg"
+        alt="img_user"
+      />
+      <span class="username">AragornZGZ</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 7013367.jpg"
+        alt="img_user"
+      />
+      <span class="username">Gollum</span>
+    </div>
+    <div class="carousel-item-container">
+      <img
+        class="carousel-item"
+        src="./assets/usersImgs/[image] - 980766.jpg"
+        alt="img_user"
+      />
+      <span class="username">Arwensita</span>
+    </div>
   </div>
 </div>
