--- a/src/app/components/BodyIMG/bodyimg.component.scss
+++ b/src/app/components/BodyIMG/bodyimg.component.scss
@@ -14,7 +14,7 @@
 
   .user_info {
     display: grid;
-    grid-template-columns: 50px 260px 40px;
+    grid-template-columns: 40px 290px 40px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -29,7 +29,6 @@
     border: $borderStory;
     border-radius: 50%;
     object-fit: cover;
-    margin-left: 2px;
   }
 
   .profile_name {
@@ -45,42 +44,80 @@
 
   .user_post {
     cursor: pointer;  
-    width: 345px;
+    width: 50vh;
   }
 
   .reactions{
     display: flex;
     margin-top: 5px;
-    margin-left: 2px;
+    margin-left: 15px;
 
     img[alt=heart_reaction_logo]{
       cursor: pointer;
       margin-top: 4px;
+      margin-right: 20px;
       width: 23px;
       height: 23px;
     }
     img[alt=comment_reaction_logo]{    
-      cursor: pointer;          
+      cursor: pointer;        
+      margin-right: 20px;  
       width: 30px;
       height: 30px;
     }
     img[alt=message_reaction_logo]{     
       cursor: pointer; 
-      margin-top: 5px;
-      width: 24px;
-      height: 22px;
+      margin-top: 3px;
+      margin-right: 20px;
+      width: 25px;
+      height: 24px;
     }
     img[alt=save_reaction_logo]{      
       cursor: pointer;  
       margin-top: 1px;
+      margin-left: 180px;
       width: 25px;
       height: 29px;
+    }
+
+    img:hover {
+      opacity: 0.4;
     }
   }
 
   .comment_posted {
-    cursor: pointer;
     font-size: 13px;
-    margin-bottom: 30px;
-    margin-left: 2px;
+    font-weight: 500;
+    margin-top: 15px;
+    margin-left: 15px;
   }
+
+  .comment_posted strong {
+    cursor: pointer;
+    font-weight: 800; 
+    text-transform: lowercase;
+}
+
+
+.h3_traduct {
+  cursor: pointer;
+  margin-top: 5px;
+  font-weight: 500;
+  font-size: 12px;
+}
+.h3_seecoms{
+  cursor: pointer;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 3328px) {
+
+
+}
+
+@media screen and (min-width: 960px) and (max-width: 1024px) {
+.post {
+    margin-left: 230px;
+  }
+}
