--- a/src/app/components/UserStories/userstories.component.scss
+++ b/src/app/components/UserStories/userstories.component.scss
@@ -58,3 +58,22 @@
     transform: translateX(calc(-60% - 0px));
   }
 }
+
+
+@media screen and (min-width: 1024px) and (max-width: 3328px) {
+  .img_users_carousel {
+    padding: 30px 0 0 0;
+  }
+}
+
+@media screen and (min-width: 960px) and (max-width: 1024px) {
+  .img_users_carousel {
+    padding: 30px 0 0 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 960px) {
+  .img_users_carousel {
+    padding: 30px 0 0 0;
+  }
+}
