--- a/src/app/components/NavBar/navbar.component.scss
+++ b/src/app/components/NavBar/navbar.component.scss
@@ -21,6 +21,7 @@ nav {
 }
 
 img{
+    cursor: pointer;
     width: 26px; 
     height: 26px;
     object-fit: cover;
@@ -47,6 +48,12 @@ width: 40px;
 img[alt=plus_logo]{
     width: 54px;
 }
+
+img[alt=reel_logo]{
+    width: 26px;
+    height: 100%;
+}
+
 
 img[alt=user_logo]{
 display: none;
@@ -92,6 +99,7 @@ img[alt=three_stripes_logo]{
 img[alt=ig_letters_logo] {
         display: flex;
         width: 120px;
+        height: 34px;
         margin-bottom: 30px;
         grid-column: 1 / 3;
         grid-row: 1 / 2;
@@ -130,6 +138,11 @@ img[alt=ig_letters_logo] {
         border-radius: 50%;
     }
 
+    img[alt=reel_logo]{
+        width: 26px;
+        height: 26px;
+    }
+
     img {
         cursor: pointer;
         margin-left: 14px;
@@ -145,6 +158,7 @@ img[alt=ig_letters_logo] {
     .h3_messages,
     .h3_profile,
     .h3_more {
+        cursor: pointer;
         display: flex;
         font-size: 16px;
         font-weight: 500;
@@ -180,6 +194,7 @@ img[alt=ig_letters_logo] {
 img[alt=ig_letters_logo] {
         display: flex;
         width: 120px;
+        height: 34px;
         margin-bottom: 30px;
         grid-column: 1 / 3;
         grid-row: 1 / 2;
@@ -205,6 +220,7 @@ img[alt=ig_letters_logo] {
         margin-left: 0;
     }
 
+
     img[alt=three_stripes_logo]{
         display: flex;
         width: 23px;
@@ -217,6 +233,12 @@ img[alt=ig_letters_logo] {
         border: $borderStory;
         border-radius: 50%;
     }
+
+    img[alt=reel_logo]{
+        width: 26px;
+        height: 26px;
+    }
+    
 
     img {
         cursor: pointer;
@@ -233,6 +255,7 @@ img[alt=ig_letters_logo] {
     .h3_messages,
     .h3_profile,
     .h3_more {
+        cursor: pointer;
         display: flex;
         font-size: 16px;
         font-weight: 500;
@@ -297,6 +320,13 @@ img[alt=ig_letters_logo] {
         border: $borderStory;
         border-radius: 50%;
     }
+
+    img[alt=reel_logo]{
+        width: 26px;
+        height: 26px;
+    }
+    
+    
 
     img {
         cursor: pointer;
