--- a/src/app/components/BodyIMG/bodyimg.component.scss
+++ b/src/app/components/BodyIMG/bodyimg.component.scss
@@ -112,10 +112,13 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 3328px) {
+  .post {
+    margin-left: 250px;
+  }
 }
 
 @media screen and (min-width: 960px) and (max-width: 1024px) {
 .post {
-    margin-left: 230px;
+    margin-left: 250px;
   }
 }
